# openclaw-podcast-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  Makefile  README.md  SOUL.md  TOOLS.md  USER.md  agent.yaml  docker-compose.yml
.archgate/adrs/: ARCH-001-podcast-production-pipeline.md  ARCH-002-zero-install-containerization.md  ARCH-003-dual-tts-engine-architecture.md  ARCH-004-inter-agent-collaboration.md  ARCH-005-multilingual-episode-generation.md
.github/workflows/: ci.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
config/: podcast.json  rss_template.xml
podcast_renderer/: Dockerfile  README.md  pyproject.toml
podcast_renderer/podcast_renderer/: __init__.py  config.py
podcast_renderer/podcast_renderer/audio/: __init__.py  assemble.py  cleanup.py  concat.py  ffmpeg.py  loudness.py  reference.py  tts_step.py
podcast_renderer/podcast_renderer/content/: __init__.py  chapters.py  metadata.py  rss.py  segment.py
podcast_renderer/podcast_renderer/llm/: __init__.py  script.py  shownotes.py
podcast_renderer/podcast_renderer/transcription/: __init__.py  whisper.py
podcast_renderer/podcast_renderer/tts/: base.py
podcast_renderer/tests/: __init__.py  conftest.py  test_audio_ffmpeg.py  test_audio_steps.py  test_config.py  test_content.py  test_llm_script.py  test_segment.py  test_shownotes.py  test_transcription.py  test_tts.py
skills/: audio_synthesis_prepare.json  audio_synthesis_prepare.md  audio_synthesis_prepare.py
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  TASK.md  TESTING.md  TROUBLESHOOTING.md
tools/: Dockerfile  README.md  pyproject.toml
tools/pipeline_runner/: __init__.py  cli.py  config.py  runner.py  scheduler.py
tools/pipeline_runner/pipelines/: __init__.py  assembly.py  cleanup.py  distribute.py  episode.py  script.py  voice.py
tools/pipeline_runner/steps/: __init__.py  assemble.py  chapters.py  cleanup.py  concat.py  handoff.py  iamq.py  llm.py  loudness.py  metadata.py  notify.py  reference.py  rss.py  segment.py  shownotes.py  transcribe.py  tts.py
tools/pipeline_runner/tts/: __init__.py  base.py  f5_tts_engine.py  mlx_audio_engine.py
tools/pipeline_runner/utils/: __init__.py  ffmpeg.py
tools/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_episode_pipeline.py  test_pipelines.py  test_runner.py  test_scheduler.py
tools/tests/test_steps/: __init__.py  test_handoff.py  test_iamq.py  test_llm.py  test_notify.py  test_segment.py
tools/tests/test_tts/: __init__.py
