[tool.poetry]
name = "podcast-renderer"
version = "0.1.0"
description = "Audio rendering, TTS, transcription, and content generation for podcast production"
authors = ["OpenClaw <noreply@openclaw.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "podcast_renderer"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31"
anthropic = "^0.52"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
ruff = "^0.8"
mypy = "^1.13"
types-requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short --cov=podcast_renderer --cov-report=term-missing --cov-fail-under=20"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "mlx_audio.*", "f5_tts_mlx.*", "mlx_whisper.*"]
ignore_missing_imports = true
