[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "Zero-install pipeline runner for the Podcast agent"
authors = ["OpenClaw <noreply@openclaw.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pipeline_runner"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31"
pydantic = "^2.0"
pydantic-settings = "^2.0"
schedule = "^1.2"
podcast-renderer = {path = "../podcast_renderer", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
ruff = "^0.8"
mypy = "^1.13"
types-requests = "^2.31"

[tool.poetry.scripts]
pipeline = "pipeline_runner.cli:main"
scheduler = "pipeline_runner.scheduler:run_scheduler"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short --cov=pipeline_runner --cov-report=term-missing --cov-fail-under=30"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["schedule.*", "podcast_renderer.*"]
ignore_missing_imports = true
